--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -40,6 +40,7 @@
 \providecommand{\Aut}{\operatorname{Aut}}
 \providecommand{\Gal}{\operatorname{Gal}}
 \providecommand{\Mor}{\operatorname{Mor}}
+\providecommand{\Hom}{\operatorname{Hom}}
 % \providecommand{\implies}{\Longrightarrow}
 
 % \providecommand{\char}{\operatorname{char}}
