--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -1,3 +1,36 @@
+@article {geck,
+    AUTHOR = {Geck, Meinolf},
+     TITLE = {On the characterization of {G}alois extensions},
+   JOURNAL = {Amer. Math. Monthly},
+  FJOURNAL = {American Mathematical Monthly},
+    VOLUME = {121},
+      YEAR = {2014},
+    NUMBER = {7},
+     PAGES = {637--639},
+      ISSN = {0002-9890},
+   MRCLASS = {12F10},
+  MRNUMBER = {3229113},
+       DOI = {10.4169/amer.math.monthly.121.07.637},
+       URL = {https://doi.org/10.4169/amer.math.monthly.121.07.637},
+}
+
+@book {rotman,
+    AUTHOR = {Rotman, Joseph J.},
+     TITLE = {Advanced modern algebra. {P}art 1},
+    SERIES = {Graduate Studies in Mathematics},
+    VOLUME = {165},
+   EDITION = {Third},
+ PUBLISHER = {American Mathematical Society, Providence, RI},
+      YEAR = {2015},
+     PAGES = {xiv+706},
+      ISBN = {978-1-4704-1554-9},
+   MRCLASS = {00-01 (12-01 13-01 14-01 16-01 18-01 20-01)},
+  MRNUMBER = {3443588},
+MRREVIEWER = {Srikanth B. Iyengar},
+       DOI = {10.1090/gsm/165},
+       URL = {https://doi.org/10.1090/gsm/165},
+}
+
 @book{dummitfoote,
 address={New York},
 edition={3rd ed},
@@ -19,3 +52,32 @@ title = {Algebra / Michael Artin.},
 year = {2014},
 }
 
+@article {weintraub,
+    AUTHOR = {Weintraub, Steven H.},
+     TITLE = {The theorem of the primitive element},
+   JOURNAL = {Amer. Math. Monthly},
+  FJOURNAL = {American Mathematical Monthly},
+    VOLUME = {128},
+      YEAR = {2021},
+    NUMBER = {8},
+     PAGES = {753--754},
+      ISSN = {0002-9890},
+   MRCLASS = {12F10},
+  MRNUMBER = {4317391},
+       DOI = {10.1080/00029890.2021.1944757},
+       URL = {https://doi.org/10.1080/00029890.2021.1944757},
+}
+
+@article {zbigniew,
+    AUTHOR = {Jelonek, Zbigniew},
+     TITLE = {A simple proof of the existence of the algebraic closure of a
+              field},
+   JOURNAL = {Univ. Iagel. Acta Math.},
+  FJOURNAL = {Universitatis Iagellonicae. Acta Mathematica},
+    NUMBER = {30},
+      YEAR = {1993},
+     PAGES = {131--132},
+      ISSN = {0083-4386},
+   MRCLASS = {12F05},
+  MRNUMBER = {1233774},
+}
