--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -20,7 +20,7 @@
 \providecommand{\dfn}{\ensuremath{:=}}
 \providecommand{\surjects}{\twoheadrightarrow}
 \providecommand{\injects}{\hookrightarrow}
-\providecommand{\id}{\ensuremath \text{Id}}
+\providecommand{\id}{\operatorname{Id}}
 \providecommand{\tns}[1][]{\otimes_{\!#1}}
 \providecommand{\mtx}[4]{\left(\begin{matrix}#1&#2\\#3&#4\end{matrix}\right)}
 \providecommand{\mat}[1]{\left(\begin{matrix}#1\end{matrix}\right)}
@@ -45,6 +45,6 @@
 
 % \providecommand{\char}{\operatorname{char}}
 \providecommand{\car}{\operatorname{char}}
-
 \providecommand{\mcd}{\operatorname{mcd}}
 \providecommand{\gcd}{\operatorname{mcd}}
+\providecommand{\Eq}{\operatorname{Eq}}
